--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Create-a-Robot</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Create a Robot</h1>
     <div>
       <input id="robotName" type="text"/>
       <button onclick="addRobot()">Create Robot</button>
-      <div id="robotDisplay">
-        
+      <div id="robot-display">
+
       </div>
     </div>
     <script src="/main.js"></script>
